--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@emailjs/browser": "^3.7.0",
     "@tailwindcss/forms": "^0.5.3",
+    "daisyui": "^2.46.0",
+    "fa-icons": "^0.2.0",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
